Fung data에서 assignee, patent 정보 추출
17.9.4

--- a/1 patent data processing/2_Fung data processing.ipynb
+++ b/1 patent data processing/2_Fung data processing.ipynb
@@ -6,10 +6,9 @@
    "source": [
     "# Fung data (assignee, patent) 붙여서 하나로 만들기\n",
     "\n",
-    "### patent assigned to an individual 분리 필요\n",
-    "- 개인이 갖고 있는 patent는 우리 관심 밖\n",
-    "- 그런데 Fung data의 disambiguated assignee에는 개인도 섞여 있음\n",
-    "- 개인 patent의 assignee를 'private'으로 바꿔주자\n",
+    "### Disambiguated assignee 붙이기\n",
+    "- Fung에서 제공하는 pdpass key 사용\n",
+    "- assingee 이름 disambiguation ㄱㄱ\n",
     "\n",
     "### Assignee 정보와 Patent 정보 붙이기\n",
     "- patent 하나에 assignee 여럿일 수 있음\n",
@@ -21,16 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. 기존 raw patent data에서 patent_id (5,6,7번대), private dummy 뽑음\n",
-    "2. 뽑은 애들이랑 Fung data iterate 하면서 assingee를 private으로 바꾸기\n",
-    "3. assignee와 patent patent_id 기준으로 join"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 1. 기존 raw patent data에서 id, assignee 뽑기"
+    "### 1. Disambiguated assignee 붙이기"
    ]
   },
   {
@@ -42,22 +32,22 @@
    "outputs": [],
    "source": [
     "#-*- coding: utf-8 -*-\n",
-    "import csv\n",
     "import os\n",
-    "import zipfile\n",
+    "import csv\n",
+    "import pandas as pd\n",
+    "import sys\n",
     "\n",
-    "os.chdir('E:/patent')\n",
+    "os.chdir('E:/apps/fung')\n",
     "\n",
-    "zf_patent1 = zipfile.ZipFile('all_patent/harvard_dataset_final_merged_output_1.zip') \n",
-    "csv_patent1 = zf_patent1.open('harvard_dataset_final_merged_output_1.csv')\n",
-    "csv_patent_reader1 = csv.reader(csv_patent1)\n",
-    "header=csv_patent_reader1.next()\n",
+    "df1 = pd.read_csv('assignee_1.csv')\n",
+    "df2 = pd.read_csv('assignee_2.csv')\n",
+    "df3 = pd.read_csv('assignee_3.csv')\n",
     "\n",
-    "zf_patent2 = zipfile.ZipFile('all_patent/harvard_dataset_final_merged_output_2.zip')\n",
-    "csv_patent2 = zf_patent2.open('harvard_dataset_final_merged_output_2.csv')\n",
-    "csv_patent_reader2 = csv.reader(csv_patent2)\n",
+    "df = df1.append([df2, df3], ignore_index=True)\n",
+    "del df1, df2, df3\n",
     "\n",
-    "header2=csv_patent_reader2.next()"
+    "pdpass = pd.read_csv('pdpass.csv')\n",
+    "df = df.merge(pdpass, on='pdpass', how='left')"
    ]
   },
   {
@@ -68,7 +58,12 @@
     {
      "data": {
       "text/plain": [
-       "19500"
+       "['state_code',\n",
+       " 'patent_id',\n",
+       " 'raw_assignee',\n",
+       " 'country_code',\n",
+       " 'pdpass',\n",
+       " 'assignee']"
       ]
      },
      "execution_count": 2,
@@ -77,143 +72,102 @@
     }
    ],
    "source": [
-    "#select the assignee col\n",
-    "for i, name in enumerate(header):\n",
-    "    if 'organization_0' in name:   \n",
-    "        assignee_col = i\n",
-    "        break\n",
-    "        \n",
-    "assignee_col"
+    "list(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cols = df.columns.tolist()\n",
+    "cols = [cols[1], cols[-1]] + cols[2:4] + [cols[0], cols[4]]\n",
+    "\n",
+    "df = df[cols]\n",
+    "df.to_csv('assignee.csv', index=False)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "index: patent_id == 1, assignee == 19500  \n",
-    "private의 경우, assignee = 'nan'"
+    "### 2. join assignee and patent"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "with open('pid_private.csv','wb') as private:\n",
-    "    writer = csv.writer(private)\n",
-    "    header = ['patent_id','private']\n",
-    "    writer.writerow(header)\n",
-    "    \n",
-    "    for i in xrange(1000000):\n",
-    "        csv_patent_reader1.next()\n",
-    "    \n",
-    "    pid = ['5','6']    \n",
-    "    for line in csv_patent_reader1:\n",
-    "        if line[1][0] in pid and line[19500] == 'nan':\n",
-    "            row=[]\n",
-    "            row.append(line[1])\n",
-    "            row.append(1)\n",
-    "            writer.writerow(row)\n",
-    "    \n",
-    "    pid = ['6','7']    \n",
-    "    for line in csv_patent_reader2:\n",
-    "        if line[1][0] in pid and line[19500] == 'nan':\n",
-    "            row=[]\n",
-    "            row.append(line[1])\n",
-    "            row.append(1)\n",
-    "            writer.writerow(row)   \n",
-    "        \n",
-    "        elif line[1][0]=='8':\n",
-    "            break"
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   "execution_count": 6,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['patent_id',\n",
+       " 'assignee',\n",
+       " 'raw_assignee',\n",
+       " 'country_code',\n",
+       " 'state_code',\n",
+       " 'pdpass',\n",
+       " 'num_assignees',\n",
+       " 'num_claims',\n",
+       " 'num_foreign_citations',\n",
+       " 'num_other_citations',\n",
+       " 'num_self_citations',\n",
+       " 'num_times_cited',\n",
+       " 'num_us_citations',\n",
+       " 'num_self_future_citations']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### 2. private으로 바꾸기"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#-*- coding: utf-8 -*-\n",
-    "import os\n",
-    "import csv\n",
-    "import pandas as pd\n",
-    "import sys\n",
-    "\n",
-    "os.chdir('E:/')\n",
-    "\n",
-    "df1 = pd.read_csv('apps/fung/assignee_1.csv')\n",
-    "df2 = pd.read_csv('apps/fung/assignee_2.csv')\n",
-    "df3 = pd.read_csv('apps/fung/assignee_3.csv')\n",
-    "\n",
-    "df = df1.append([df2, df3], ignore_index=True)\n",
-    "del df1, df2, df3\n",
-    "\n",
-    "with open('patent/pid_private.csv','rb') as prv:\n",
-    "    reader = csv.reader(prv)\n",
-    "    reader.next()\n",
-    "    line = reader.next()\n",
-    "        \n",
-    "    for i, row in df.iterrows():\n",
-    "        a=line[0]\n",
-    "        if row['patent_id'] == int(line[0]):\n",
-    "            df.loc[i,'assignee'] = 'private'\n",
-    "            line = reader.next()\n",
-    "\n",
-    "df.to_csv('apps/fung/assignee.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 3. join"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "df1 = pd.read_csv('apps/fung/patent_1.csv')\n",
-    "df2 = pd.read_csv('apps/fung/patent_2.csv')\n",
-    "df3 = pd.read_csv('apps/fung/patent_3.csv')\n",
+    "df1 = pd.read_csv('patent_1.csv')\n",
+    "df2 = pd.read_csv('patent_2.csv')\n",
+    "df3 = pd.read_csv('patent_3.csv')\n",
     "\n",
     "df1 = df1.append([df2, df3], ignore_index=True)\n",
     "del df2, df3\n",
     "\n",
-    "df1.to_csv('apps/fung/patent_vars.csv', index=False)\n",
+    "df1.to_csv('patent_vars.csv', index=False)\n",
+    "\n",
     "df = df.merge(df1, on='patent_id', how='left', sort=True)\n",
+    "del df1\n",
     "\n",
-    "cols = df.columns.tolist()\n",
-    "cols = cols[1:4] + cols[0:1] + cols[4:]\n",
-    "df = df[cols]\n",
-    "\n",
-    "df.to_csv('apps/fung/patent_fung.csv', index=False)"
+    "list(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "여기서 두 개로 분리\n",
+    "1. patent_fung : raw_assignee 제거 (아무 필요가 없거든)\n",
+    "2. assignee_raw : assignee, raw_assignee 남기기 (나중에 join 용)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "cols = df.columns.tolist()\n",
+    "cols = cols[0:10] + [cols[-2], cols[-3], cols[-4], cols[-1]]\n",
+    "df = df[cols]\n",
+    "\n",
+    "raw = df.iloc[:,1:3]\n",
+    "raw.drop_duplicates(inplace=True)\n",
+    "raw.to_csv('assignee_raw.csv',index=False)\n",
+    "\n",
+    "del df['raw_assignee']\n",
     "df.to_csv('patent_fung.csv', index=False)"
    ]
   }
