uspto_hist와 Fung merge
17.9.4

--- a/1 patent data processing/3_USPTO_hist Fung merge.ipynb
+++ b/1 patent data processing/3_USPTO_hist Fung merge.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# USPTO와 FUNG merge\n",
+    "# USPTO_hist와 FUNG merge\n",
     "\n",
-    "### USPTO에서 필요한 변수\n",
+    "### USPTO_hist에서 필요한 변수\n",
     "- patent_id\n",
     "- nber\n",
     "- class (uspc, uspc_sub)\n",
@@ -38,13 +38,14 @@
        " 'assignee',\n",
        " 'country_code',\n",
        " 'state_code',\n",
+       " 'pdpass',\n",
        " 'num_assignees',\n",
        " 'num_claims',\n",
        " 'num_foreign_citations',\n",
        " 'num_other_citations',\n",
-       " 'num_self_citations',\n",
-       " 'num_times_cited',\n",
        " 'num_us_citations',\n",
+       " 'num_times_cited',\n",
+       " 'num_self_citations',\n",
        " 'num_self_future_citations']"
       ]
      },
@@ -60,7 +61,7 @@
     "\n",
     "os.chdir('E:/apps')\n",
     "\n",
-    "df=pd.read_csv('uspto_EE&CC_10.csv')\n",
+    "df=pd.read_csv('uspto_hist_EE&CC_10.csv')\n",
     "cols = ['patent_id','nber','uspc','uspc_sub','appl_dt','disp_dt']\n",
     "df=df[cols]\n",
     "df = df.loc[df['patent_id']>0,:]\n",
@@ -85,56 +86,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** assignee profile **"
+    "** assignee profile, patent_assignee 파일 생성 **"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "assignee\n",
-       "International Business Machines Corporation    5578\n",
-       "Samsung Electronics Co., Ltd.                  3617\n",
-       "Microsoft Corporation                          2985\n",
-       "Panasonic Corporation                          2131\n",
-       "Canon Kabushiki Kaisha                         2033\n",
-       "Kabushiki Kaisha Toshiba                       1937\n",
-       "Sony Corporation                               1923\n",
-       "Intel Corporation                              1564\n",
-       "Hitachi, Ltd.                                  1248\n",
-       "Hewlett-Packard Development Company, L.P.      1233\n",
+       "INTERNATIONAL BUSINESS MACHINES CORPORATION    5614\n",
+       "SAMSUNG ELECTRONICS CO LTD                     4128\n",
+       "MICROSOFT CORPORATION                          3011\n",
+       "PANASONIC CORPORATION                          2128\n",
+       "CANON KABUSHIKI KAISHA                         2044\n",
+       "KABUSHIKI KAISHA TOSHIBA                       1964\n",
+       "SONY CORPORATION                               1930\n",
+       "INTEL CORPORATION                              1567\n",
+       "HITACHI LTD                                    1273\n",
+       "HEWLETT PACKARD DEVELOPMENT COMPANY LP         1248\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df = df.loc[:,['patent_id','assignee']]\n",
+    "df.to_csv('patent_assignee.csv', index=False)\n",
+    "\n",
     "counts = df.groupby('assignee').size()\n",
     "counts.sort_values(ascending=False,inplace=True)\n",
     "counts[0:10]"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "꼴 보니까 이름 processing 한 번 해야겠네 (어차피 compustat때문에 할거지만!)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "counts.to_csv('patent_assignee_10.csv')"
+    "counts.to_csv('assignee_profile.csv')"
    ]
   }
  ],
