USPTO XML에서 app 데이터 추출
17.9.4

--- a/app data processing/1_Get app data from USPTO XMLs.ipynb
+++ b/app data processing/1_Get app data from USPTO XMLs.ipynb
@@ -206,7 +206,7 @@
     "    cls_writer.writerow(['number','id','mainclass','subclass','further_m','further_s'])\n",
     "    \n",
     "    while not date=='20050106':\n",
-    "        filename = 'xmls/ipab'+ date + '.xml'   #making filename\n",
+    "        filename = 'app_xmls/ipab'+ date + '.xml'   #making filename\n",
     "        xml = extract_xml_strings(filename)   #load and split whole xml into app_xmls  \n",
     "        for doc in xml:\n",
     "            parser = et.XMLParser()\n",
@@ -288,7 +288,7 @@
     "    cls_writer = csv.writer(cls,quoting=csv.QUOTE_ALL)\n",
     "       \n",
     "    while not date=='20140102':\n",
-    "        filename = 'xmls/ipab'+ date + '.xml'   #making filename\n",
+    "        filename = 'app_xmls/ipab'+ date + '.xml'   #making filename\n",
     "        xml = extract_xml_strings(filename)   #load and split whole xml into app_xmls  \n",
     "        for doc in xml:\n",
     "            root = et.fromstring(doc)\n",
@@ -393,7 +393,7 @@
     "    cls_writer = csv.writer(cls,quoting=csv.QUOTE_ALL)\n",
     "       \n",
     "    while not date=='20140102':\n",
-    "        filename = 'xmls/ipab'+ date + '.xml'   #making filename\n",
+    "        filename = 'app_xmls/ipab'+ date + '.xml'   #making filename\n",
     "        xml = extract_xml_strings(filename)   #load and split whole xml into app_xmls  \n",
     "        for doc in xml:\n",
     "            root = et.fromstring(doc)\n",
