thomson과 patent 연결고리 만들기
17.9.4

--- a/producing matching key.ipynb
+++ b/producing matching key.ipynb
@@ -94,32 +94,32 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>International Business Machines Corporation</td>\n",
-       "      <td>5578</td>\n",
+       "      <td>INTERNATIONAL BUSINESS MACHINES CORPORATION</td>\n",
+       "      <td>5614</td>\n",
        "      <td>internationalbusinessmachinescorporation</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Samsung Electronics Co., Ltd.</td>\n",
-       "      <td>3617</td>\n",
+       "      <td>SAMSUNG ELECTRONICS CO LTD</td>\n",
+       "      <td>4128</td>\n",
        "      <td>samsungelectronicsco</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Microsoft Corporation</td>\n",
-       "      <td>2985</td>\n",
+       "      <td>MICROSOFT CORPORATION</td>\n",
+       "      <td>3011</td>\n",
        "      <td>microsoftcorporation</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Panasonic Corporation</td>\n",
-       "      <td>2131</td>\n",
+       "      <td>PANASONIC CORPORATION</td>\n",
+       "      <td>2128</td>\n",
        "      <td>panasoniccorporation</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Canon Kabushiki Kaisha</td>\n",
-       "      <td>2033</td>\n",
+       "      <td>CANON KABUSHIKI KAISHA</td>\n",
+       "      <td>2044</td>\n",
        "      <td>canonkabushikikaisha</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -128,11 +128,11 @@
       ],
       "text/plain": [
        "                                      assignee  num_patent  \\\n",
-       "0  International Business Machines Corporation        5578   \n",
-       "1                Samsung Electronics Co., Ltd.        3617   \n",
-       "2                        Microsoft Corporation        2985   \n",
-       "3                        Panasonic Corporation        2131   \n",
-       "4                       Canon Kabushiki Kaisha        2033   \n",
+       "0  INTERNATIONAL BUSINESS MACHINES CORPORATION        5614   \n",
+       "1                   SAMSUNG ELECTRONICS CO LTD        4128   \n",
+       "2                        MICROSOFT CORPORATION        3011   \n",
+       "3                        PANASONIC CORPORATION        2128   \n",
+       "4                       CANON KABUSHIKI KAISHA        2044   \n",
        "\n",
        "                               new_assignee  \n",
        "0  internationalbusinessmachinescorporation  \n",
@@ -148,9 +148,9 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('patent_assignee_10.csv')\n",
+    "df = pd.read_csv('assignee_profile.csv')\n",
     "df['new_assignee'] = df['assignee'].apply(nameprocessing)\n",
-    "df.to_csv('patent_assignee_10.csv', index=False)\n",
+    "df.to_csv('assignee_new.csv', index=False)\n",
     "df.iloc[0:5,:]"
    ]
   },
@@ -173,21 +173,39 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7753 7664\n"
+     ]
+    }
+   ],
    "source": [
+    "a=len(df)\n",
     "df = df.groupby('new_assignee',as_index=False).sum()\n",
-    "df.sort_values('num_patent', ascending=False, inplace=True)"
+    "df.sort_values('num_patent', ascending=False, inplace=True)\n",
+    "\n",
+    "print a, len(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "약 100개 정도 더 뭉치기 성공"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "com = pd.read_csv('compu_10.csv')[['new_assignee','conm']]\n",
+    "com = pd.read_csv('compustat_10.csv')[['new_assignee','conm']]\n",
     "df = df.merge(com, on='new_assignee', how='left', sort=False)\n",
     "df.index.names = ['PCkey']\n",
     "df.drop_duplicates(inplace=True)   #I don't know why but there are some duplicates\n",
@@ -196,14 +214,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0 8.30602965404\n"
+      "2.0 14.9595722483\n"
      ]
     }
    ],
@@ -216,7 +236,8 @@
    "metadata": {},
    "source": [
     "### 3. manual processing\n",
-    "- num_patent가 평균 보다 큰 기업의 경우 matching 시도 (엑셀로)"
+    "- 일단 num_patent가 평균 보다 큰 기업의 경우(14개) matching 시도 (엑셀로)\n",
+    "- median이 2.0이니 흠..."
    ]
   }
  ],
