patent assignee - compustat gvkey 매칭
17.9.13

--- a/Exploring data.ipynb
+++ b/Exploring data.ipynb
@@ -143,14 +143,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['pub_no',\n",
+       " 'appl_id',\n",
+       " 'claim_no',\n",
+       " 'ind_flg',\n",
+       " 'cnx_flg',\n",
+       " 'word_ct',\n",
+       " 'char_ct',\n",
+       " 'or_ct',\n",
+       " 'sf_ct',\n",
+       " 'cns_ct']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "csv_patent1 = open('app_claims_stats.csv')\n",
+    "csv_patent1 = open('raw_app/app_claims_stats.csv')\n",
     "csv_patent_reader1 = csv.reader(csv_patent1)\n",
     "header = csv_patent_reader1.next()\n",
     "header"
@@ -231,7 +250,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "csv_patent1 = open('app_profile.csv')\n",
@@ -250,7 +271,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "csv_patent_reader1.next()"
@@ -345,13 +368,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "case_id / case_number / date / description 알 수 있음"
+    "case_id / case_number / date / __description__ 알 수 있음"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -381,6 +406,149 @@
    "metadata": {},
    "source": [
     "글쎄... 여기서 원고가 어떤 patent, 기술 바탕으로 피고를 고소했는지 알 수는 없네..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['case_row_id',\n",
+       " 'case_number',\n",
+       " 'pacer_id',\n",
+       " 'case_name',\n",
+       " 'court_name',\n",
+       " 'assigned_to',\n",
+       " 'referred_to',\n",
+       " 'case_cause',\n",
+       " 'jurisdictional_basis',\n",
+       " 'demand',\n",
+       " 'jury_demand',\n",
+       " 'lead_case',\n",
+       " 'related_case',\n",
+       " 'settlement',\n",
+       " 'date_filed',\n",
+       " 'date_closed',\n",
+       " 'date_last_filed']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv_patent1 = open('litigation/cases.csv')\n",
+    "csv_patent_reader1 = csv.reader(csv_patent1)\n",
+    "header = csv_patent_reader1.next()\n",
+    "header"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "case_id / case_number / __cause__ / related case / date 알 수 있음"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['54973',\n",
+       " '01-Jan-1970',\n",
+       " '223949',\n",
+       " 'ASTRAZENECA AB et al v. SANDOZ, INC.',\n",
+       " 'UNITED STATES DISTRICT COURT DISTRICT OF NEW JERSEY',\n",
+       " 'Judge Joel A. Pisano',\n",
+       " 'Magistrate Judge Tonianne J. Bongiovanni',\n",
+       " '35:271 Patent Infringement',\n",
+       " 'Federal Question',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '2009-01-14',\n",
+       " '2011-06-02',\n",
+       " '']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv_patent_reader1.next()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['case_row_id',\n",
+       " 'case_number',\n",
+       " 'party_row_count',\n",
+       " 'party_type',\n",
+       " 'name_row_count',\n",
+       " 'name']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv_patent1 = open('litigation/names.csv')\n",
+    "csv_patent_reader1 = csv.reader(csv_patent1)\n",
+    "header = csv_patent_reader1.next()\n",
+    "header"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "case_id / case_number / __firm_name__ 알 수 있음"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1', '0:79-cv-06704-JCP', '1', 'Plaintiff', '1', 'Burroghs Wellcome Co.']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv_patent_reader1.next()"
    ]
   }
  ],
