--- a/for_test.ipynb
+++ b/for_test.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# xml 파일 쪼개기\n",
+    "# app xml 파일 쪼개기\n",
     "\n",
     "### 각 application이 하나의 xml 파일 그 자체    \n",
     "__=> 하나씩 잘라야 함__"
@@ -947,6 +947,318 @@
    ],
    "source": [
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Patent xml에서 appl citaiton 불러오기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#-*- coding: utf-8 -*-\n",
+    "import os\n",
+    "import re\n",
+    "import csv\n",
+    "import sys\n",
+    "import xml.etree.ElementTree as et\n",
+    "import datetime as dt\n",
+    "\n",
+    "reload(sys)\n",
+    "sys.setdefaultencoding('utf-8')  # to process name of assignee in unicode \n",
+    "os.chdir('J:/data')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def extract_xml_strings(filename):\n",
+    "    \"\"\"\n",
+    "    Given a string [filename], opens the file and returns a generator\n",
+    "    that yields tuples. A tuple is of format (year, xmldoc string). A tuple\n",
+    "    is returned for every valid XML doc in [filename]\n",
+    "    \"\"\"\n",
+    "    # search for terminating XML tag\n",
+    "    endtag_regex = re.compile('^<!DOCTYPE (.*) SYSTEM')\n",
+    "    endtag = ''\n",
+    "    with open(filename, 'r') as f:\n",
+    "        doc = ''  # initialize current XML doc to empty string\n",
+    "        for line in f:\n",
+    "            doc += line\n",
+    "            endtag = endtag_regex.findall(line) if not endtag else endtag   #is there any endtags?\n",
+    "            if not endtag:\n",
+    "                continue      #if there's no end tag, keep the loop going\n",
+    "            terminate = re.compile('^</{0}>'.format(endtag[0]))    #if there's a end tag, then check whether the doc is finished or not\n",
+    "            if terminate.findall(line):     #if there's a terminator\n",
+    "                yield (doc)                 #export doc and reinitialize a doc\n",
+    "                endtag = ''\n",
+    "                doc = ''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 추출할 element\n",
+    "\n",
+    "patent_id : 첫 doc-number  \n",
+    "app_cited : patcit / document-id / country='US' & len(doc-number) > 7  \n",
+    "* ** country != 'US'에서 탈출 (다음 문서로 넘너가면 됨) **"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'D7643386'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample = extract_xml_strings('ipgb20100105.xml')\n",
+    "doc1=sample.next()\n",
+    "root = et.fromstring(doc1)\n",
+    "n = root.iter('doc-number')\n",
+    "pid = n.next().text\n",
+    "pid"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "pid의 문제: 맨 앞이 D로 시작하는 애들 때문에 D없는 애들 앞에 0이 붙음  \n",
+    "but, 우리가 관심있는 특허는 D로 시작하는 애들 없음  \n",
+    "**=> int 만들어서 0 떼고 value Error 뜨면 바로 다음 doc으로 넘겨버리자**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([7643387], 2, 2, 2, 1, 1)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample = extract_xml_strings('ipgb20100105.xml')\n",
+    "a=[]\n",
+    "b=0\n",
+    "c=0\n",
+    "d=0\n",
+    "e=0\n",
+    "f=0\n",
+    "for doc in sample:\n",
+    "    root = et.fromstring(doc)\n",
+    "    b += 1\n",
+    "    n = root.iter('doc-number')\n",
+    "    c += 1\n",
+    "    pid = n.next().text\n",
+    "    d += 1\n",
+    "    try:\n",
+    "        pid = int(pid)\n",
+    "        e += 1\n",
+    "        a.append(pid)\n",
+    "\n",
+    "    except ValueError:\n",
+    "        f += 1\n",
+    "        pass\n",
+    "        \n",
+    "a,b,c,d,e,f"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "cit id의 문제: 연도와 번호 사이의 /  \n",
+    "**=> / 를 공백으로 만들자**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2005/0265141'"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cit=root.iter('patcit')\n",
+    "did = cit.next()[0]\n",
+    "a=did.find('doc-number').text\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'20050265141'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=a.replace('/','')\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "date = '20100105'  #initializing date\n",
+    "\n",
+    "with open('app_citation.csv', 'wb') as cit:\n",
+    "    writer = csv.writer(cit,quoting=csv.QUOTE_ALL)\n",
+    "    writer.writerow(['patent_id','app_cited'])\n",
+    "    \n",
+    "    while not date=='20100126':\n",
+    "        filename = 'xmls/ipgb'+ date + '.xml'   #making filename\n",
+    "        xml = extract_xml_strings(filename)   #load and split whole xml into app_xmls  \n",
+    "        for doc in xml:\n",
+    "            root = et.fromstring(doc)\n",
+    "            n = root.iter('doc-number')\n",
+    "            pid = n.next().text\n",
+    "            try:\n",
+    "                pid = int(pid)                          \n",
+    "                for cit in root.iter('patcit'):   #using iter because of multi-assignee apps \n",
+    "                    did = cit[0]\n",
+    "                    if did.find('country').text != 'US':\n",
+    "                        break \n",
+    "                        \n",
+    "                    cid = did.find('doc-number').text\n",
+    "                    if len(cid)>8:\n",
+    "                        cid=cid.replace('/','')\n",
+    "                        writer.writerow([pid,cid])\n",
+    "                        \n",
+    "            except ValueError:      #if pid != int, go to the next doc\n",
+    "                continue    \n",
+    "                             \n",
+    "        date = dt.datetime.strptime(date,'%Y%m%d')   #Let's move on to next xml\n",
+    "        date += dt.timedelta(weeks=1)\n",
+    "        date = date.strftime('%Y%m%d')   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# regex 써서 patent infringement case 개수 확인"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "import os\n",
+    "import re\n",
+    "\n",
+    "os.chdir('J:/data')\n",
+    "\n",
+    "patent_regex = re.compile('.* Patent Infringement$')\n",
+    "cnt = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('cases.csv', 'rb') as f:\n",
+    "    reader = csv.reader(f)\n",
+    "    header = reader.next()\n",
+    "    i = header.index('case_cause')\n",
+    "    for line in reader:\n",
+    "        if patent_regex.findall(line[i]):\n",
+    "            cnt+=1\n",
+    "cnt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "i"
    ]
   }
  ],
