--- a/1 patent data processing/2_Fung data processing.ipynb
+++ b/1 patent data processing/2_Fung data processing.ipynb
@@ -170,6 +170,69 @@
     "del df['raw_assignee']\n",
     "df.to_csv('patent_fung.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. assingee_raw 다시 만들기 - 왜 없어졌지?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\DW\\Anaconda2\\lib\\site-packages\\IPython\\core\\interactiveshell.py:2717: DtypeWarning: Columns (1) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['patent_id',\n",
+       " 'assignee',\n",
+       " 'raw_assignee',\n",
+       " 'country_code',\n",
+       " 'state_code',\n",
+       " 'pdpass']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#-*- coding: utf-8 -*-\n",
+    "import os\n",
+    "import csv\n",
+    "import pandas as pd\n",
+    "import sys\n",
+    "\n",
+    "os.chdir('E:/apps/fung')\n",
+    "\n",
+    "df = pd.read_csv('assignee.csv')\n",
+    "\n",
+    "list(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "raw = df.iloc[:,1:3]\n",
+    "raw.drop_duplicates(inplace=True)\n",
+    "raw.to_csv('assignee_raw.csv',index=False)"
+   ]
   }
  ],
  "metadata": {
