--- a/Exploring data.ipynb
+++ b/Exploring data.ipynb
@@ -323,6 +323,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "###  assignee.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['rf_id',\n",
+       " 'ee_name',\n",
+       " 'ee_address_1',\n",
+       " 'ee_address_2',\n",
+       " 'ee_city',\n",
+       " 'ee_state',\n",
+       " 'ee_postcode',\n",
+       " 'ee_country']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv_patent1 = open('raw_uspto/assignee.csv')\n",
+    "csv_patent_reader1 = csv.reader(csv_patent1)\n",
+    "header = csv_patent_reader1.next()\n",
+    "header"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['36250888', 'NORTHERN TELECOM LIMITED', '', '', '', '', '', 'NOT PROVIDED']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv_patent_reader1.next()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Litigation"
    ]
   },
