threshold 살짝 변경
17.9.20

--- a/matrix transform (교수님 일).ipynb
+++ b/matrix transform (교수님 일).ipynb
@@ -12,6 +12,7 @@
     "import os\n",
     "import numpy as np\n",
     "import math\n",
+    "import re\n",
     "\n",
     "os.chdir('J:/data')"
    ]
@@ -41,11 +42,11 @@
    },
    "outputs": [],
    "source": [
-    "def t_similarity(l1,l2):\n",
+    "def t_similarity(l1,l2,t):\n",
     "    cnt = 0\n",
     "    for i in xrange(len(l1)):\n",
     "        if math.isnan(l1[i])==False and math.isnan(l2[i])==False:\n",
-    "            if l1[i] > 0.2 and l2[i] > 0.2:\n",
+    "            if l1[i] > t and l2[i] > t:\n",
     "                cnt += 1 \n",
     "\n",
     "    return cnt"
@@ -82,11 +83,7 @@
     "    for row in arr:\n",
     "        sim.append(fn(l1,row))\n",
     "    \n",
-    "    if fn == t_similarity:\n",
-    "        sim.append(sum(not math.isnan(x) and x > 0.2 for x in l1))\n",
-    "    \n",
-    "    else:\n",
-    "        sim.append(sum(not math.isnan(x) for x in l1))\n",
+    "    sim.append(sum(not math.isnan(x) for x in l1))\n",
     "    \n",
     "    return sim"
    ]
@@ -99,7 +96,23 @@
    },
    "outputs": [],
    "source": [
-    "arr = np.genfromtxt('s_data.csv',delimiter=',',names=True)\n",
+    "def get_sim_t(l1,t,arr):\n",
+    "    sim = []\n",
+    "    for row in arr:\n",
+    "        sim.append(t_similarity(l1,row,t))\n",
+    "    \n",
+    "    sim.append(sum(not math.isnan(x) and x > t for x in l1))\n",
+    "    \n",
+    "    return sim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.genfromtxt('s_data1.csv',delimiter=',',names=True)\n",
     "\n",
     "with open('s_category.csv','rb') as f:\n",
     "    reader = csv.reader(f)\n",
@@ -112,10 +125,18 @@
     "    writer = csv.writer(f)\n",
     "    writer.writerow(header)\n",
     "    \n",
-    "    fnlist = [similarity, t_similarity, w_similarity]\n",
+    "    fnlist = [similarity, w_similarity]\n",
     "    for fn in fnlist:\n",
     "        for row in arr:\n",
     "            line = get_sim(row,fn,arr)\n",
+    "            writer.writerow(line)\n",
+    "            \n",
+    "        writer.writerow([])\n",
+    "        \n",
+    "    thresh = [0.3,0.5,0.7]        \n",
+    "    for t in thresh:\n",
+    "        for row in arr:\n",
+    "            line = get_sim_t(row,t,arr)\n",
     "            writer.writerow(line)\n",
     "            \n",
     "        writer.writerow([])"
