litigation 이름 매칭
17.9.27

--- a/litigation matching.ipynb
+++ b/litigation matching.ipynb
@@ -90,8 +90,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('assignee_raw.csv')\n",
+    "df['new_raw_assignee'] = df['raw_assignee'].apply(nameprocessing)\n",
+    "df.drop_duplicates(inplace=True)\n",
+    "\n",
+    "df1 = pd.read_csv('litigation/lit_new.csv',index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -121,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -132,9 +151,50 @@
     "\n",
     "os.chdir('E:/apps')\n",
     "\n",
-    "df = pd.read_csv('pat_lit_raw_match.csv')\n",
+    "df = pd.read_csv('litigation/pat_lit_raw_match.csv')\n",
     "df1 = pd.read_csv('assignee_raw.csv')\n",
     "\n",
+    "del df['new_raw_assignee']\n",
+    "df1 = df1.merge(df, on='raw_assignee', how='left', sort=True)\n",
+    "df1.drop_duplicates(inplace=True)\n",
+    "\n",
+    "df2 = pd.read_csv('assignee_gvkey.csv')\n",
+    "df2 = df2.merge(df1, on='assignee', how='left', sort=True)\n",
+    "df2.drop_duplicates(inplace=True)\n",
+    "\n",
+    "df2.to_csv('patent_lit_key.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "457"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=df2['gvkey']\n",
+    "a.drop_duplicates(inplace=True)\n",
+    "len(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "del df['new_raw_assignee']\n",
     "df1 = df1.merge(df, on='raw_assignee', how='left', sort=True)\n",
     "df1.drop_duplicates(inplace=True)\n",
@@ -151,12 +211,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "__** 보수공사 필요__ manual matching을 위해 matching 실패한 assignee 찾아야 함"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "\n",
+    "os.chdir('E:/apps')\n",
+    "df = pd.read_csv('patent_lit_key.csv')\n",
+    "\n",
+    "for i in range(1,len(df)):\n",
+    "    if pd.isnull(df.iloc[i,3]):\n",
+    "        if df.iloc[i,2] == df.iloc[i-1,2]:\n",
+    "            df.iloc[i,3] = 'delete_it'\n",
+    "\n",
+    "df = df.loc[df['name'] != 'delete_it']\n",
+    "df.to_csv('patent_lit_key_rev.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 3. matching 성공률 확인"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -176,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +275,7 @@
        "9457"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,11 +288,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cases.to_csv('related_cases.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. litigation 기업 이름 추출"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "139355 139123\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "\n",
+    "os.chdir('E:/apps')\n",
+    "df = pd.read_csv('litigation/lit_name.csv')\n",
+    "a=len(df)\n",
+    "\n",
+    "df.drop_duplicates(inplace=True)\n",
+    "print a, len(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df.to_csv('lit.names.csv',index=False)"
    ]
   }
  ],
