교수님 일 잠깐
17.9.27

--- a/matrix transform (교수님 일).ipynb
+++ b/matrix transform (교수님 일).ipynb
@@ -108,13 +108,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "arr = np.genfromtxt('s_data1.csv',delimiter=',',names=True)\n",
+    "arr = np.genfromtxt('sample.csv',delimiter=',',names=True)\n",
     "\n",
-    "with open('s_category.csv','rb') as f:\n",
+    "with open('sam_cate.csv','rb') as f:\n",
     "    reader = csv.reader(f)\n",
     "    header = reader.next()\n",
     "\n",
